# court_wizard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CREDITS.md  Cargo.toml  GAMEPLAY_IMPLEMENTATION_PLAN.md  LICENSE  README.md  build_wasm.sh  clippy.toml  config.toml  generate_favicon.html  serve.sh
.cargo/: config.toml
.github/workflows/: discord-changelog.yml
docs/: CHANGELOG.md  court_wizard.d.ts  court_wizard.js  court_wizard_bg.wasm.d.ts  index.html  message_architecture.md  the_game.d.ts  the_game.js  the_game_bg.wasm.d.ts
src/: main.rs
src/config/: defaults.rs  error.rs  helper.rs  mod.rs  plugin.rs  progress.rs  resources.rs  storage.rs  systems.rs  tests.rs
src/game/: components.rs  constants.rs  mod.rs  plugin.rs  resources.rs  run_conditions.rs  shared_systems.rs  systems.rs  unit_cache.rs  win_lose_systems.rs
src/game/attacker/: components.rs  plugin.rs  styles.rs  systems.rs
src/game/battlefield/: components.rs  mod.rs  plugin.rs  styles.rs  systems.rs
src/game/defender/: components.rs  plugin.rs  styles.rs  systems.rs
src/game/input/: components.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/game/units/: components.rs  constants.rs  mod.rs  plugin.rs  systems.rs
src/game/wizard/: components.rs  styles.rs  systems.rs
src/state/: mod.rs  plugin.rs  states.rs
src/ui/: components.rs  helper.rs  mod.rs  plugin.rs  styles.rs  systems.rs
src/ui/game_over/: components.rs  mod.rs  plugin.rs  styles.rs  systems.rs
src/ui/in_game/: components.rs  constants.rs  mod.rs  plugin.rs  styles.rs  (+1 more)
web/: index.html  the_game.d.ts  the_game.js
(+132 files in other folders)
