[package]
name = "the_game"
version = "0.0.5"
edition = "2024"
default-run = "the_game"

[dependencies]
bevy = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
rand = "0.8"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"  # Use thin LTO instead of full LTO to avoid WASM table issues
strip = true  # Strip debug symbols to reduce size
